fixed button alignment

--- a/style.css
+++ b/style.css
@@ -77,6 +77,18 @@ input[type="checkbox"]:checked + label {
   height: 50px;
 }
 
+/* button */
+#card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+/* #card-btn {
+  position: absolute;
+  bottom: 20px;
+} */
+
 /* Pagination */
 .pagination-color {
   color: orange;
